@@ -1,5 +1,5 @@
 /*
-   Copyright (C) 2006-2012, 2014, 2016-2017 Free Software Foundation, Inc.
+   Copyright (C) 2006-2012, 2014, 2016-2018 Free Software Foundation, Inc.
    Written by Roger While, Simon Sobisch, Ron Norman
 
    This file is part of GnuCOBOL.
@@ -79,10 +79,8 @@ COB_SYSTEM_GEN ("C$SLEEP",		1, 1, cob_sys_sleep)
 COB_SYSTEM_GEN ("C$TOLOWER",		2, 2, cob_sys_tolower)
 COB_SYSTEM_GEN ("C$TOUPPER",		2, 2, cob_sys_toupper)
 
-
-COB_SYSTEM_GEN ("\x91",			2, 2, cob_sys_x91)
+COB_SYSTEM_GEN ("\x91",			3, 3, cob_sys_x91)
 COB_SYSTEM_GEN ("\xE4",			0, 0, cob_sys_clear_screen)
 COB_SYSTEM_GEN ("\xE5",			0, 0, cob_sys_sound_bell)
 COB_SYSTEM_GEN ("\xF4",			2, 2, cob_sys_xf4)
 COB_SYSTEM_GEN ("\xF5",			2, 2, cob_sys_xf5)
-
